--- a/_posts/2022-02-15-owl.md
+++ b/_posts/2022-02-15-owl.md
@@ -13,13 +13,13 @@ keywords:
 # OWL: Cooperative Thread Array Aware Scheduling Techniques for Improving GPGPU Performance (ASPLOS'13, Adwait Jog)
 <!--more-->
 
-## 서론
+# 서론
  Co-operative Thread Array(CTA) 간 data locality가 존재하되, locaity가 무작위로 발생하게 되는 경우(e.g. graph application),
  data locality가 존재하는 CTA끼리 묶어서 실행시킴으로서 성능향상을 시킬 수 있다. 하지만 CUDA 나 OpenCL 과 같은 programming 방식으로는 한계가 명확하다. 
  data locality를 잘 활용하지 못하면 큰 병렬성을 제공하는 GPU라고 할 지라도 큰 memory latency 에 의해 성능저하가 발생하게 된다. 
  따라서 이번 논문 OWL의 4가지 방법을 통해 어떻게 data locality를 개선하고 latency hiding을 하는지 익힌다. 
 
- ## 도입
+ # 도입
  GPU를 공부하는 사람들은(특히 나 같은 석사 나부랭이) textbook으로 공부하는데 한계가 분명하여 논문을 통해 교수님들, 박사님들의 Introduction에 적혀져있는 Background를 통해
  공부해나간다. 그러므로 도입부분에서는 GPU architecure의 특성을 작성한다.
 
@@ -44,7 +44,7 @@ keywords:
  위의 문제를 해결하기 위해 우선순위를 정해 특정 CTA 그룹에 대해 CTA-aware scheduling을 하는 것을 통해 long memory fetch latency를 발생시키는 여러 요인들을 완화시키기로 한다.
  방법에는 4가지가 존재한다. 
 
- ## CTA-aware two-level warp scheduler
+ # CTA-aware two-level warp scheduler
  한 코어에서 실행가능한 CTA가 N개이고, 하나의 CTA가 k개의 warp로 이루어져있다고 가정하자. 적용된 방식은 이 CTA들을 n개의 CTA로 구성된 작은 그룹으로 묶어 RR 방식으로 스케줄링한다.
  따라서 스케줄러가 하나의 그룹, *n x k*개의 warp를 선택하면, *((N-n) x k)*개의 나머지 warp는 다른 그룹으로 설정된다. 선택된 초기의 그룹의 warp들은 같은 우선순위를 받고, RR방식으로 실행된다. 실해 도중 모든 warp들이 unavailable해졌을 때, 다른 그룹으로 switching이 발생하게 되고 선택된 다른 그룹안에서 또다시 RR방식으로 스케줄링이 되도록한다. 이러한 방식을 통해 memory latency hiding이 가능하다.
  *소그룹 단위로 실행이 이루어지기 떄문에 코드의 진행속도에 차이가 있기 때문에 위의 방식이 가능하다.*
@@ -56,7 +56,7 @@ keywords:
 warp data locality: warp안의 스레드들은 memory coalesce를 통해 locality를 활용한다. 
 intra-CTA(inter-warp) data locality: CTA안의 warp들이 특정 data block 또는 row에 접근한다면, on-chip cache에서의 data reuse를 통해 memory latency를 줄일 수 있다.
 
-## Locality aware warp scheduling
+# Locality aware warp scheduling
 위의 설명한 CTA-aware scheduling 방식은 L1 cache를 제대로 활용하고 있지 못한다. 다수의 CTA를 한 SM에서 처리할 때, L1 cache는 고작 16-64KB으로, cache contention으로 인해 warp들의 data reuse를 방해한다.
 cache contention 문제는 capacity를 늘리는 것으로 어느정도 해결이 가능하지만 capacity를 늘리게 되면 cache access latency(address bit 증가, way수 증가)가 증가하게 되며,
 cache capacity가 늘어가는 만큼, computing resource가 감소하여 architecture의 parallelism을 방해할 수 있다. 
@@ -72,7 +72,7 @@ switching될 수 있도록 한다.
 하지만 switching 될 CTA 그룹 수가 적으면 pipeline의 busy를 유지하기 쉽지않다. 또한, 하나의 CTA그룹의 크기가 L1 cache를 이용할 수 있을만큼 충분히 작아야 의미가 존재한다. 현재 방식으로 우선순위 CTA그룹의
 interval이 감소하였어도 data eviction을 막을 수 있을 정도로 충분한지는 모르겠다. 그리고 n을 너무 줄이면 pipeline underutilization이 부작용으로 발생할 수 있다. 
 
-## CTA-Aware-Locality-BLP: BLP aware warp scheduling
+# CTA-Aware-Locality-BLP: BLP aware warp scheduling
 DRAM의 Bank-Level-Parallelism또한 잘 활용해야 off-chip access시 발생하는 큰 패널티를 줄일 수 있다(GPGPU-Sim에서는 FR-FCFS를 통해 BLP를 최대화한다). CTA들이 같은 DRAM row에 접근한다고 했을 떄, DRAM의 row buffer를
 계속 이용가능하기 때문에 높은 locality를 달성할 수 있지만, queuing 시간이 증가하고, 다른 bank를 이용하지 않음으로 parallelism이 악화된다. 따라서 row buffer의 locality를 보장하면서 BLP를 최대화하여 성능향상을 이끌어 낼 수 있도록 해야한다. 
 
