--- a/_posts/2022-02-15-owl.md
+++ b/_posts/2022-02-15-owl.md
@@ -1,5 +1,5 @@
 ---
-title: "CTA scheduling으로 locality를 활용하는 법"
+title: "Improve data locality via CTA scheduling"
 categories:
 - GPU
 - Scheduling
