--- a/_posts/2022-02-15-owl.md
+++ b/_posts/2022-02-15-owl.md
@@ -10,7 +10,7 @@ tags:
 keywords:
 - computer architecture
 ---
-# OWL: Cooperative Thread Array Aware Scheduling Techniques for Improving GPGPU Performance (ASPLOS'13, Adwait Jog)
+**OWL: Cooperative Thread Array Aware Scheduling Techniques for Improving GPGPU Performance (ASPLOS'13, Adwait Jog)**
 <!--more-->
 
 # 서론
