--- a/_posts/2022-02-15-owl.md
+++ b/_posts/2022-02-15-owl.md
@@ -10,6 +10,8 @@ tags:
 - locality
 keywords:
 - computer architecture
+
+use_math: true
 ---
 **OWL: Cooperative Thread Array Aware Scheduling Techniques for Improving GPGPU Performance (ASPLOS'13, Adwait Jog)**
 <!--more-->
